# AITest

./: .gitignore  README.md
.trae/documents/: db-query-java-implementation-plan.md
.trae/documents/shutkey-doc/: SQL查询结果表格固定表头功能UI交互规范.md  SQL查询结果表格固定表头功能测试报告.md  SQL查询结果表格固定表头功能需求规格说明书.md  快捷键管理系统UI交互规范.md  快捷键管理系统测试报告.md  数据库对象详情模态框复制功能UI交互规范.md  (+2 more)
ai/.specify/: init-options.json  integration.json
code/w5/pg-mcp/: .env.example  .gitignore  README.md  pyproject.toml
code/w5/pg-mcp/pg_mcp/: __init__.py  config.py  constants.py  main.py
code/w5/pg-mcp/pg_mcp/database/: __init__.py  pool.py  schema.py
code/w5/pg-mcp/pg_mcp/history/: __init__.py  manager.py
code/w5/pg-mcp/pg_mcp/models/: __init__.py  config.py  query.py  schema.py
code/w5/pg-mcp/pg_mcp/sql/: __init__.py  executor.py  generator.py  validator.py
code/w5/pg-mcp/pg_mcp/utils/: __init__.py  error.py  llm.py  logger.py
code/w5/pg-mcp/tests/: conftest.py
code/w5/pg-mcp/tests/integration/: test_mcp.py  test_query.py  test_tool_registration.py
code/w5/pg-mcp/tests/unit/: test_config.py  test_error.py  test_executor.py  test_generator.py  test_history.py  test_main.py  test_pool.py  test_schema.py  test_validator.py
documents/add20260502/: requirements.md  test-report.md  ui-design.md
documents/image-generator/: requirements.md  test-report.md  ui-design.md
documents/snake-multiplayer-lobby/: requirements.md
documents/tab-right-menu/: requirements.md  test-report.md  ui-design.md
specs/w1/: 0001-spec.md  0002-implementation-plan.md  0003-seed-data.sql  instructions.md  openapi.yaml
(+1647 files in other folders)
